fix: Tighten the spacing at the bottom of a quarto-listing in styles.css.

--- a/styles.css
+++ b/styles.css
@@ -524,6 +524,10 @@ div.quarto-post .thumbnail {
   font-style: italic;
 }
 
+.quarto-listing {
+  padding-bottom: 0em;
+}
+
 /* }}} */
 
 /* Papers and Presentations {{{ */
